<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignUpPage">


    <ImageView
        android:layout_marginTop="130dp"
        android:layout_marginHorizontal="40dp"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:src="@drawable/insta"
        />

    <Button
        android:id="@+id/btnEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Log in with Facebook"
        android:layout_marginTop="30dp"
        android:textColor="@color/white"
        android:layout_marginHorizontal="10dp"
        android:textStyle="bold"
        android:textSize="13sp"
        android:paddingTop="1dp"
        android:paddingBottom="1dp"
        android:background="@drawable/facebookbtn"
        android:textAllCaps="false"
        android:drawableStart="@drawable/ic_icons8_facebook_3_"
        android:layout_gravity="center"
        android:paddingLeft="80dp"
        android:paddingRight="90dp"

        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginTop="50dp">

        <TextView
            android:id="@+id/tvText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/or"
            android:textColor="#272525" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:layout_toLeftOf="@id/tvText"
            android:background="#7E7979"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_centerVertical="true"
            android:layout_marginEnd="16dp"
            android:layout_toEndOf="@id/tvText"
            android:background="#7E7979"
            />

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="60dp"
        android:text="@string/sign_up_with_email_or_phone_number"
        android:textColor="#039be5" />

    <View android:background="#7E7979"
        android:layout_width = "match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="80dp"/>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/haveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="85dp"
        android:text="@string/already_have_an_account"
        android:textColor="#7E7979" />

    <TextView
        android:id="@+id/logIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="3dp"
        android:text="@string/log_in"
        android:textStyle="bold"

        android:textColor="#7E7979" />

</LinearLayout>



</LinearLayout>