<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LogintoAccount">

    <ImageView
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="40dp"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/ic__79dd7b3aac50a76ecebc5e822bd7645"
        android:layout_gravity="center"
        />

<!--     <androidx.cardview.widget.CardView-->
<!--         app:cardCornerRadius="25dp"-->
<!--         app:cardElevation="10dp"-->
<!--         android:layout_gravity="center"-->
<!--         android:layout_marginTop="45dp"-->
<!--         android:layout_width="match_parent"-->
<!--         android:layout_marginStart="38dp"-->
<!--         android:layout_marginEnd="38dp"-->
<!--         app:cardUseCompatPadding="true"-->
<!--         android:layout_height="wrap_content"-->
<!--         >-->

         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="20dp"
             android:orientation="vertical"
             >

             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:gravity="center"
                 android:weightSum="2"
                 android:layout_gravity="center"
                 android:layout_marginTop="30dp"
                 android:layout_marginStart="20dp"
                 android:layout_marginEnd="20dp"
                 >

                 <TextView
                     android:id="@+id/phone"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:text="@string/phone"
                     android:layout_weight="1"
                     android:paddingTop="5dp"
                     android:textAlignment="center"
                     android:textColor="@color/black"
                     android:textSize="16sp"
                     android:paddingRight="15dp"
                     android:paddingLeft="15dp"
                     android:textStyle="bold|normal"
                     />

                 <TextView
                     android:id="@+id/email"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:text="@string/email"
                     android:layout_weight="1"
                     android:paddingTop="5dp"
                     android:textAlignment="center"
                     android:textColor="@color/black"
                     android:paddingRight="15dp"
                     android:paddingLeft="15dp"

                     android:textSize="16sp"
                     android:textStyle="bold|normal"
                     />


             </LinearLayout>

             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:gravity="center"
                 android:weightSum="2"
                 android:layout_gravity="center"
                 android:layout_marginTop="30dp"
                 android:layout_marginStart="25dp"
                 android:layout_marginEnd="25dp"
                 android:background="@drawable/switch_tumbs"
                 >
                 <View
                     android:id="@+id/view1"
                     android:background="@drawable/switch_trcks"
                     android:layout_width = "0dp"
                     android:layout_weight="1"
                     android:layout_height="3dp"/>
                 <View
                     android:id="@+id/view2"
                     android:background="@drawable/switch_trcks"
                     android:layout_width = "0dp"
                     android:layout_weight="1"
                     android:layout_height="3dp"/>
             </LinearLayout>



             <LinearLayout
                 android:id="@+id/phonelayout"
                 android:background="@color/white"
                 android:padding="25dp"
                 android:gravity="center"
                 android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 >

<!--                 <com.google.android.material.textfield.TextInputLayout-->
<!--                     android:hint="Phone"-->
<!--                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"-->
<!--                     android:layout_marginTop="5dp"-->
<!--                     android:layout_marginEnd="5dp"-->
<!--                     app:boxStrokeColor="@color/purple_200"-->
<!--                     android:layout_width="match_parent"-->
<!--                     android:layout_height="wrap_content">-->



                     <com.google.android.material.textfield.TextInputEditText
                         android:inputType="number|text"
                         android:id="@+id/tePhone"
                         android:ems="10"
                         android:textColor="@color/black"
                         android:textStyle="normal"

                         android:hint="phone"
                         android:textSize="13sp"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                        />
<!--                 </com.google.android.material.textfield.TextInputLayout>-->

                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/you_may_receive_sms_notifications_from_us_for_security_and_login_purposes"
                     />

             </LinearLayout>

             <LinearLayout
                 android:id="@+id/emailLayout"
                 android:background="@color/white"
                 android:padding="25dp"
                 android:visibility="gone"
                 android:gravity="center"
                 android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 >

<!--                 <com.google.android.material.textfield.TextInputLayout-->
<!--                     android:hint="Phone"-->
<!--                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"-->
<!--                     android:layout_marginTop="5dp"-->
<!--                     android:layout_marginEnd="5dp"-->
<!--                     app:boxStrokeColor="@color/purple_200"-->
<!--                     android:layout_width="match_parent"-->
<!--                     android:layout_height="wrap_content">-->
                 

                     <com.google.android.material.textfield.TextInputEditText
                         android:inputType="number"
                         android:id="@+id/teEmail"
                         android:ems="10"
                         android:textColor="@color/black"
                         android:textStyle="normal"
                         android:hint="email"
                         android:textSize="13sp"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         />


<!--                 </com.google.android.material.textfield.TextInputLayout>-->

                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/you_may_receive_sms_notifications_from_us_for_security_and_login_purposes"
                     />

             </LinearLayout>

             <Button
                 android:id="@+id/btnPhoneEmail"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/next"
                 android:layout_marginTop="30dp"
                 android:textColor="@color/white"
                 android:layout_marginHorizontal="10dp"
                 android:textStyle="bold"
                 android:textSize="13sp"
                 android:paddingTop="1dp"
                 android:paddingBottom="1dp"
                 android:background="@drawable/facebookbtn"
                 android:textAllCaps="false"
                 android:layout_gravity="center"


                 />


         </LinearLayout>


<!--     </androidx.cardview.widget.CardView>-->

</LinearLayout>